--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 port=8080
-DB_HOST=localhost
+host=localhost
 DB_PORT=5432
-username=postgres
+user=postgres
 password=TBOBARD0
 db=aidforaids
 JWT_SECRET=mysecret
