--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "joi": "^17.8.3",
     "joi-password-complexity": "^5.1.0",
     "jsonwebtoken": "^9.0.0",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "sequelize": "^6.29.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
